@@ -1,7 +1,7 @@
 Jelmer Vernooij <jelmer@samba.org>
 
-Thanks to the following people for comments, code reviews, funding, bug 
-reports, testing, committing patches/bundles and generally keeping up 
+Thanks to the following people for comments, code reviews, funding, bug
+reports, testing, committing patches/bundles and generally keeping up
 while I was asking annoying questions:
 
 David Allouche
